--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -13,9 +13,16 @@ jobs:
     - name: ⚡ Checkout code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-    - uses: hashicorp/setup-terraform@v3
+    - name: 📖 Read current terraform version
+      run: |
+        VER=$(cat .terraform-version)
+        echo "TERRAFORM_VERSION=$VER" >> $GITHUB_ENV
+
+    - name: 🔨 Setup Terraform
+      # from https://github.com/hashicorp/setup-terraform/commits/main
+      uses: hashicorp/setup-terraform@97f030cf6dc0b4f5e0da352c7bca9cca34579800 #v3.1.0
       with:
-        terraform_version: "1.6.6"
+        terraform_version: "${{ env.TERRAFORM_VERSION }}"
 
     - name: 🏁 Init terraform folders
       id: init_terraform_folders
