enable pre.commit features

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,13 @@ repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.89.1
     hooks:
-      # - id: terraform_fmt
-      # - id: terraform_docs
-      #   args:
-      #     - --hook-config=--path-to-file=README.md        # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
-      #     - --hook-config=--add-to-existing-file=true     # Boolean. true or false
-      #     - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
-      #     - --args=--hide providers
-      # - id: terraform_tfsec
+      - id: terraform_fmt
+      - id: terraform_docs
+        args:
+          - --hook-config=--path-to-file=README.md        # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
+          - --hook-config=--add-to-existing-file=true     # Boolean. true or false
+          - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
+          - --args=--hide providers
       - id: terraform_validate
         args:
           - --init-args=-lockfile=readonly
