--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
       - id: terraform_validate
         args:
           - --init-args=-lockfile=readonly
+          - --hook-config=--retry-once-with-cleanup=true
           - --init-args=-plugin-dir=/tmp/.terraform.d/plugin-cache
           - --args=-json
           - --args=-no-color
