try pr with changes folders

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -11,4 +11,4 @@ jobs:
 
     steps:
       - name: Checkout Modified Paths
-        uses: ./.github/actions/checkout-modified-paths.yml
+        uses: .github/actions/checkout-modified-paths.yml
