try pr with changes folders

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -10,5 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: |
+          ls -la
+
       - name: Checkout Modified Paths
         uses: .github/actions/checkout-modified-paths.yml
