--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -14,4 +14,4 @@ jobs:
           ls -la
 
       - name: Checkout Modified Paths
-        uses: .github/actions/checkout-modified-paths.yml
+        uses: ./.github/actions/checkout-modified-paths/action.yml
