try pr with changes folders

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -20,4 +20,4 @@ jobs:
           ls -la
 
       - name: Checkout Modified Paths
-        uses: ../.github/actions/checkout-modified-paths/action.yml
+        uses: ./.github/actions/checkout-modified-paths
