--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -18,6 +18,8 @@ jobs:
 
       - run: |
           ls -la
+          pwd
+          ls -la ./.github/actions
 
       - name: Checkout Modified Paths
         uses: ./.github/actions/checkout-modified-paths
