--- a/.github/actions/checkout-modified-paths-only/action.yml
+++ b/.github/actions/checkout-modified-paths-only/action.yml
@@ -26,7 +26,7 @@ runs:
     - name: Checkout Modified Paths
       uses: actions/checkout@v3
       with:
-        paths: ${{ steps.get-paths.outputs.paths }}
+        sparse-checkout: ${{ steps.get-paths.outputs.paths }}
 
     - name: See folders downloaded
       id: see
