--- a/.github/actions/checkout-modified-paths-only/action.yml
+++ b/.github/actions/checkout-modified-paths-only/action.yml
@@ -18,7 +18,7 @@ runs:
         echo "get modified paths from domains"
         modified_paths_domains=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq | tr '\n' ' ')
         echo "merge paths"
-        modified_paths="$modified_paths_source $modified_paths_domains"
+        modified_paths="$modified_paths_source $modified_paths_domains .github"
         echo "${modified_paths}"
         echo "::set-output name=paths::$modified_paths"
       shell: bash
