--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -45,7 +45,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           sparse-checkout: |
-            ${{ steps.get-paths.outputs.paths }}
+            .github/workflows
+            src/synthetic-monitoring
+            src/zabbix
+            src/domains/printit-secrets
+            src/domains/qi-secrets
+            .github
 
       - name: See folders downloaded
         id: see
