--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -36,7 +36,10 @@ jobs:
           echo "get modified paths from domains"
           modified_paths_domains=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq )
           echo "merge paths"
-          modified_paths="$modified_paths_source $modified_paths_domains .github"
+          modified_paths="$modified_paths_source
+          $modified_paths_domains
+          .github"
+
           echo "${modified_paths}"
           echo "::set-output name=paths::$modified_paths"
         shell: bash
