--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -47,13 +47,7 @@ jobs:
       - name: Checkout Modified Paths
         uses: actions/checkout@v3
         with:
-          sparse-checkout: |
-            .github/workflows
-            src/synthetic-monitoring
-            src/zabbix
-            src/domains/printit-secrets
-            src/domains/qi-secrets
-            .github
+          sparse-checkout: ${{ steps.get-paths.outputs.paths }}
 
       - name: See folders downloaded
         id: see
