--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -49,8 +49,7 @@ jobs:
       - name: Checkout Modified Paths
         uses: actions/checkout@v3
         with:
-          sparse-checkout: |
-            ${{ steps.get-paths.outputs.paths }}
+          sparse-checkout: ${{ steps.get-paths.outputs.paths }}
 
       - name: See folders downloaded
         id: see
