--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -36,7 +36,7 @@ jobs:
           echo "$modified_paths_source"
           echo "get modified paths from domains"
           modified_paths_domains=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq )
-          echo "modified_paths_domains"
+          echo "$modified_paths_domains"
           echo "merge paths"
           modified_paths="$modified_paths_source
           $modified_paths_domains
@@ -50,7 +50,8 @@ jobs:
       - name: Checkout Modified Paths
         uses: actions/checkout@v3
         with:
-          sparse-checkout: ${{ steps.get-paths.outputs.paths }}
+          sparse-checkout: |
+            ${{ steps.get-paths.outputs.paths }}
 
       - name: See folders downloaded
         id: see
