--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -42,7 +42,7 @@ jobs:
           variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n')
 
           echo "${variabile_multiline}"
-          echo "::set-output name=paths::variabile_multiline"
+          echo "::set-output name=paths::$variabile_multiline"
         shell: bash
 
       - name: Checkout Modified Paths
