--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -22,7 +22,7 @@ jobs:
           ls -la ./.github/actions
 
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -39,17 +39,16 @@ jobs:
           echo "$modified_paths_domains"
           echo "merge paths"
           modified_paths="$modified_paths_source $modified_paths_domains .github"
-          variabile_multiline=$(echo "\n$modified_paths" | tr ' ' '\n')
+          variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n')
 
           echo "${variabile_multiline}"
           echo "::set-output name=paths::$variabile_multiline"
         shell: bash
 
       - name: Checkout Modified Paths
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          sparse-checkout: |
-            ${{ steps.get-paths.outputs.paths }}
+          sparse-checkout: ${{ steps.get-paths.outputs.paths }}
 
       - name: See folders downloaded
         id: see
