--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -41,15 +41,15 @@ jobs:
           modified_paths="$modified_paths_source $modified_paths_domains .github"
           variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n')
 
-          echo "PAGOPA_MULTIPLE_FOLDERS=${variabile_multiline}" >> "$GITHUB_ENV"
+          echo "PAGOPA_MULTIPLE_FOLDERS=${variabile_multiline| base64}" >> "$GITHUB_ENV"
         shell: bash
 
       - name: See folders downloaded
         id: download
         shell: bash
         run: |
-          echo "${PAGOPA_MULTIPLE_FOLDERS}"
-          for path in ${PAGOPA_MULTIPLE_FOLDERS}; do
+          echo "${PAGOPA_MULTIPLE_FOLDERS | base64 -d}"
+          for path in ${PAGOPA_MULTIPLE_FOLDERS| base64 -d}; do
             git checkout "$path"
 
             echo "Checkout eseguito in: $path"
