--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -39,10 +39,10 @@ jobs:
           echo "$modified_paths_domains"
           echo "merge paths"
           modified_paths="$modified_paths_source $modified_paths_domains .github"
-          variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n' | base64)
+          variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n' )
           echo $variabile_multiline
 
-          echo "PAGOPA_MULTIPLE_FOLDERS=${variabile_multiline} >> "$GITHUB_ENV"
+          echo "PAGOPA_MULTIPLE_FOLDERS=${variabile_multiline}" >> "$GITHUB_ENV"
         shell: bash
 
       - name: See folders downloaded
