--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -42,7 +42,11 @@ jobs:
           variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n' )
           echo $variabile_multiline
 
-          echo "PAGOPA_MULTIPLE_FOLDERS=${variabile_multiline//\//\\}" >> "$GITHUB_ENV"
+          {
+            echo 'PAGOPA_MULTIPLE_FOLDERS<<EOF'
+            $variabile_multiline
+            echo EOF
+          } >> "$GITHUB_ENV"
         shell: bash
 
       - name: See folders downloaded
