--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -40,7 +40,7 @@ jobs:
           echo "merge paths"
           modified_paths="$modified_paths_source $modified_paths_domains .github"
           variabile_multiline=$(echo "$modified_paths" | tr ' ' '\n')
-          echo "variabile_multiline" > "/tmp/paths.txt"
+          echo "$variabile_multiline" > "/tmp/paths.txt"
         shell: bash
 
       - name: See folders downloaded
