--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -44,22 +44,23 @@ jobs:
           echo "$variabile_multiline" > "/tmp/paths.txt"
         shell: bash
 
-      - name: See folders downloaded
-        id: download
-        shell: bash
-        run: |
-          PAGOPA_MULTIPLE_FOLDERS=$(fold -w $(wc -L < "/tmp/paths.txt") < "/tmp/paths.txt")
-          for path in ${PAGOPA_MULTIPLE_FOLDERS}; do
-            git checkout -- "$path"
+#      - name: See folders downloaded
+#        id: download
+#        shell: bash
+#        run: |
+#          PAGOPA_MULTIPLE_FOLDERS=$(fold -w $(wc -L < "/tmp/paths.txt") < "/tmp/paths.txt")
+#          for path in ${PAGOPA_MULTIPLE_FOLDERS}; do
+#            git checkout -- "$path"
+#
+#            echo "Checkout eseguito in: $path"
+#          done
+#          git reset --hard HEAD~1
 
-            echo "Checkout eseguito in: $path"
-          done
-          git reset --hard HEAD~1
-
-#      - name: Checkout Modified Paths
-#        uses: actions/checkout@v4
-#        with:
-#          sparse-checkout: ${{ steps.get-paths.outputs.paths }}
+      - name: Checkout Modified Paths
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            $(fold -w $(wc -L < "/tmp/paths.txt") < "/tmp/paths.txt")
 
       - name: See folders downloaded
         id: see
