--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -36,32 +36,15 @@ jobs:
       - name: Get Modified Paths
         id: get-paths
         run: |
-          # Ottieni il nome del branch corrente
-          current_branch=${GITHUB_HEAD_REF}
-
-          # Ottieni il commit di testa del branch corrente
-          head_commit=$(git rev-parse HEAD)
-
-          # Ottieni il commit di origine del branch corrente, se disponibile
-          base_commit=$(git rev-parse --first-parent "$current_branch^1" 2>/dev/null || echo "$head_commit")
-
-          # Imposta il riferimento per il diff
-          if [ "$base_commit" = "$head_commit" ]; then
-              diff_ref="HEAD"
-          else
-              diff_ref="$base_commit"
-          fi
-
           # Ottieni i percorsi modificati rispetto al riferimento
-          modified_paths_source=$(git diff --name-only $diff_ref | grep -v 'domains' | grep '/' | cut -d '/' -f 1,2 | uniq)
+          modified_paths_source=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -v 'domains' | grep '/' | cut -d '/' -f 1,2 | uniq)
           echo "$modified_paths_source"
 
-          modified_paths_domains=$(git diff --name-only $diff_ref | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq)
+          modified_paths_domains=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq)
           echo "$modified_paths_domains"
 
           # Unisci i percorsi modificati e aggiungi il percorso ".github"
           modified_paths="$modified_paths_source $modified_paths_domains .github"
-          variabile_multiline=$(echo "$modified_paths" | tr ' ' '\\n')
 
           echo "📌 modified_paths"
           echo "$modified_paths" > "/tmp/paths.txt"
