--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -81,9 +81,9 @@ jobs:
           ls -la
           du -h -d 3 .
 
-      # - name: Static Analysis
-      #   uses: pagopa/eng-github-actions-iac-template/azure/terraform-static-analysis@v1.14.1
-      #   with:
-      #     precommit_version: 'v1.89.1@sha256:1ea921bc4fe87651d41677218e537afdcdb8202e757e554b9866668eaba144c5'
+      - name: Static Analysis
+        uses: pagopa/eng-github-actions-iac-template/azure/terraform-static-analysis@v1.14.1
+        with:
+          precommit_version: 'v1.89.1@sha256:1ea921bc4fe87651d41677218e537afdcdb8202e757e554b9866668eaba144c5'
 
 
